tests/compile_fail/v3_iface_tier_mismatch.iron
interface Cmp {
    readonly func cmp(other: Int) -> Int
}

object Bad impl Cmp {
    init() {}
    func cmp(other: Int) -> Int { return 0 }
}

func main() {}
